feat: add sign up button to frontend
add sign up button and post request to server to check if user exist

MODULE2-PART5

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,10 @@
               </div>
             </fieldset>
             <button class="authorization-form__button" type="submit">
-                <span class="authorization-form__button-text">Log in</span>
+              Log in
+            </button>
+            <button class="authorization-form__button authorization-form__button--signup" type="button" id="signup">
+              Sign up
             </button>
         </form>
         <div id="token-error" class="token-error"></p>
