feat: add passport local strategy for log in
add local strategy, validate user email and password, give jwt-token if data is valid

MODULE2-PART5

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <fieldset class="authorization-form__fieldset">
               <div class="authorization-form__email authorization-form__input-wrapper">
                 <label class="authorization-form__label" for="email">Ваш e-mail:</label> <br>
-                <input class="authorization-form__text-input" type="email" name="email" id="email" placeholder="Укажите e-mail" required>
+                <input class="authorization-form__text-input" type="email" name="username" id="email" placeholder="Укажите e-mail" required>
                 <div class="authorization-form__error" id="email-error"></div>
               </div>
               <div class="authorization-form__password authorization-form__input-wrapper">
