feat: add images filtration
filtrate user images, show all images and user images or user images only

MODULE2-PART5

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -18,6 +18,7 @@
             <ul class="links-list" id="links">
 
             </ul>
+            <button class="show-images" id="filter-button">Показать мои картинки</button>
         </section>
         <section class="photos" id="photo-section">
         </section>
